SERVER-55111 When using a nested shard key, a delete in a txn to a chunk that has moved is not throwing MigrationConflict